# WordLearn

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  api.py  end.html  main.py  pyproject.toml  requirements.txt  words.xlsx
wordlearn/: __init__.py  api.py  generator.py  loader.py  question_generator.py  validator.py
